# metatensor

./: CMakeLists.txt  Cargo.toml  tox.ini
.github/workflows/: build-wheels.yml  coverage.yml  python-tests.yml  rust-tests.yml  torch-tests.yml
docs/generate_examples/: conf.py
docs/src/: index.rst  installation.rst
docs/src/core/reference/c/: labels.rst  misc.rst
docs/src/core/reference/python/: io.rst
docs/src/devdoc/: architecture.rst  benchmarks.rst  faq.rst  index.rst  mmap-gds.md
docs/src/jax/: index.rst  tutorial.rst
docs/src/operations/: index.rst
docs/src/torch/: index.rst
docs/src/torch/reference/: serialization.rst
metatensor-core/: CHANGELOG.md  CMakeLists.txt  Cargo.toml  build.rs
metatensor-core/include/: metatensor.h
metatensor-core/include/metatensor/: arrays.hpp  block.hpp  io.hpp  io_fwd.hpp  labels.hpp  tensor.hpp
metatensor-core/src/: data.rs  labels.rs  labels_array.rs  lib.rs
metatensor-core/src/c_api/: blocks.rs  labels.rs  tensor.rs
metatensor-core/src/c_api/io/: block.rs  mod.rs  tensor.rs
metatensor-core/src/io/: block.rs  mmap.rs  mmap_array.rs  mod.rs  partial.rs
metatensor-core/src/tensor/: keys_to_properties.rs  keys_to_samples.rs  merge_plan.rs  mod.rs
metatensor-core/tests/cpp/: data.cpp  labels.cpp  tensor.cpp
metatensor-jax/: CMakeLists.txt  Cargo.toml  lib.rs
metatensor-jax/cmake/: metatensor_jax-config.in.cmake
metatensor-jax/include/metatensor/jax/: ffi_handlers.hpp
metatensor-jax/src/: register.cpp
metatensor-jax/tests/: CMakeLists.txt
metatensor-jax/tests/cmake-project/: CMakeLists.txt
metatensor-jax/tests/cmake-project/src/: main.cpp
metatensor-torch/: CHANGELOG.md
metatensor-torch/include/metatensor/torch/: misc.hpp  tensor.hpp
metatensor-torch/src/: array.cpp  block.cpp  labels.cpp  misc.cpp  register.cpp  tensor.cpp
metatensor-torch/tests/: array.cpp  labels.cpp
metatensor-xla-ffi/: Cargo.toml
metatensor-xla-ffi/src/: lib.rs
python/benchmarks/: README.rst  bench_labels.py  bench_operations.py
python/examples/core/: 4-dlpack-interop.py
python/examples/jax/: 1-jax-basics.py
python/metatensor-jax/: README.rst  pyproject.toml  setup.py
python/metatensor-jax/metatensor_jax/: __init__.py  _c_lib.py  _jax_array.py  _structural.py  _xla_ffi.py
python/metatensor-jax/tests/: _tests_utils.py  liskov.py  operations.py  pytree.py  structural.py
python/metatensor_core/metatensor/: __init__.py  _c_api.py  labels.py  tensor.py
python/metatensor_core/metatensor/data/: array.py  extract.py
python/metatensor_core/metatensor/io/: __init__.py  _mmap.py  _mmap_gds.py  _tensor.py
python/metatensor_core/tests/: serialization.py
python/metatensor_jax/: pyproject.toml
python/metatensor_jax/metatensor_jax/: __init__.py  _pytree.py  _structural.py  _xla_ffi.py
python/metatensor_jax/tests/: jit.py  structural.py
python/metatensor_operations/metatensor_operations/: _array_api_helpers.py  _backend.py  _dispatch.py  _join.py  _merge.py  _reduce_over_properties.py  _reduce_over_samples.py
python/metatensor_operations/metatensor_operations/_vendored/: __init__.py
python/metatensor_torch/metatensor_torch/: __init__.py  _bridge.py  _scripted_ops.py  documentation.py  operations.py  serialization.py
python/metatensor_torch/tests/: serialization.py  tensor.py
rust/metatensor/: Cargo.toml
rust/metatensor-sys/: Cargo.toml
rust/metatensor-sys/src/: c_api.rs  lib.rs
rust/metatensor/src/: labels.rs  lib.rs  tensor.rs
rust/metatensor/src/block/: block_ref.rs
rust/metatensor/src/data/: array.rs  ndarray_array.rs
rust/metatensor/src/io/: mod.rs  tensor.rs
rust/metatensor/tests/: keys-to-properties.rs  keys-to-samples.rs  mmap.rs
